examples/fail/test.java
class fuga extends Object {
    int z;
    fuga(){ super(); }
}
